8134031: Incorrect JIT compilation of complex code with inlining and escape analysis

Bad rewiring of memory edges when we split unique types during EA

Reviewed-by: kvn